# dayroll

./: .gitignore  Cargo.toml  NEXT_STEPS.md  README.md
.githooks/: pre-commit
src/: app.rs  event_handler.rs  lib.rs  main.rs  markdown.rs  model.rs  storage.rs  theme.rs  ui_state.rs
src/render/: mod.rs  panels.rs  widgets.rs
tests/: dayroll_core.rs  filter_tests.rs  storage_and_rollover.rs
