[package]
name = "dayroll"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
